--- a/Hello_JS/Hello_JS/Hello_JS.csproj
+++ b/Hello_JS/Hello_JS/Hello_JS.csproj
@@ -67,6 +67,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Lotto.html" />
+    <Content Include="Lotto.js" />
     <Content Include="ninenine.html" />
     <Content Include="ninenine.js" />
     <Content Include="NumberBaseBall.html" />
